--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,15 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- Java Look and Feel Graphics Repository 1.0 -->
+        <dependency>
+            <groupId>jlfgr</groupId>
+            <artifactId>jlfgr</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/jlfgr-1.0.jar</systemPath>
+        </dependency>
     </dependencies>
 
 </project>
