--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/jlfgr-1.0.jar</systemPath>
         </dependency>
+
+        <!-- third swing L&F -->
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>2.2</version>
+        </dependency>
     </dependencies>
 
 </project>
