add support for converting jar to exe

--- a/src/main/resources/log.properties
+++ b/src/main/resources/log.properties
@@ -10,7 +10,7 @@ java.util.logging.ConsoleHandler.formatter = redcoder.texteditor.log.LogMessageF
 
 # file handler
 java.util.logging.FileHandler.level = INFO
-java.util.logging.FileHandler.pattern = %h/rc-log/rc%u.%g.log
+java.util.logging.FileHandler.pattern = %h/rc-text-editor/log/rc%u.%g.log
 # 1M=1073741824
 java.util.logging.FileHandler.limit = 1048576
 java.util.logging.FileHandler.count = 100
